--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
     "bcrypt": "^4.0.1",
     "celebrate": "^12.0.1",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
     "jest": "^25.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "mongoose": "^5.9.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
