--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest":{
+    "testEnvironment": "node"
+  },
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
