--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "jest":{
+  "jest": {
     "testEnvironment": "node"
   },
   "scripts": {
@@ -18,13 +18,14 @@
     "bcrypt": "^4.0.1",
     "celebrate": "^12.0.1",
     "express": "^4.17.1",
-    "jest": "^25.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.3"
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.3",
+    "supertest": "^4.0.2"
   }
 }
